quickcheck hash functions

--- a/Haskell/Makefile
+++ b/Haskell/Makefile
@@ -9,6 +9,11 @@ all : Test
 Test: 	$(MODULES) $(TESTS)
 	$(GHC) -O2 --make Test.hs
 
+qc:	${MODULES} QCHash.hs
+	${GHC} -O2 --make QCHash.hs -o qc && ./qc
+
+
+
 .PHONY: clean
 clean:
-	rm  *.hi *.o Contract/*.hi Contract/*.o Test
+	rm  *.hi *.o Contract/*.hi Contract/*.o Test qc
