fix of monadic contract bugs

--- a/Coq/Makefile
+++ b/Coq/Makefile
@@ -182,6 +182,7 @@ install-doc:
 clean:
 	rm -f $(VOFILES) $(VIFILES) $(GFILES) $(VFILES:.v=.v.d) $(VFILES:=.beautified) $(VFILES:=.old)
 	rm -f all.ps all-gal.ps all.pdf all-gal.pdf all.glob $(VFILES:.v=.glob) $(VFILES:.v=.tex) $(VFILES:.v=.g.tex) all-mli.tex
+	make -C Extraction clean
 	- rm -rf html mlihtml
 
 archclean:
