--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 before_install:
     - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
-    - travis_retry sudo add-apt-repository -y ppa:glondu/ppa
+    - travis_retry sudo add-apt-repository -y ppa:grand-edgemaster/coq-ocaml42
     - travis_retry sudo apt-get update
-    - travis_retry sudo apt-get install coq-8.4 ghc
+    - travis_retry sudo apt-get install coq ghc
+    - coqc --version
+    - ghc --version
 script:
     - cd Coq
     - make
