--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 before_install:
     - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
-    - travis_retry sudo add-apt-repository -y ppa:ezyang/coq-git
+    - travis_retry sudo add-apt-repository -y ppa:glondu/ppa
     - travis_retry sudo apt-get update
     - travis_retry sudo apt-get install coq ghc
     - coqc --version
