--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ before_install:
     - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
     - travis_retry sudo add-apt-repository -y ppa:avsm/ocaml41+opam12
     - travis_retry sudo apt-get update
-    - travis_retry sudo apt-get install ghc ocaml ocaml-native-compilers camlp4-extra
+    - travis_retry sudo apt-get install ghc-7.8.4 ocaml ocaml-native-compilers camlp4-extra
     - ghc --version
     - wget https://coq.inria.fr/distrib/V8.4pl6/files/coq-8.4pl6.tar.gz
     - tar xf coq-8.4pl6.tar.gz
